mailer is ok but the passwoord doesn't seem to get really change need to fix it again

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,6 +1,6 @@
 Hello
 
-voici le code que tu devras renseigner avec ton nouveau mot de passe : <%= @user.password_reset_token %>.
+voici le code que tu devras renseigner avec ton nouveau mot de passe : <%= @user.reset_password_token %>
 
 Pour accéder accerder au formulaire : <%= @url %>.
 
