fixed mailer syntax

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Hello </h1>
     <p>
-      voici le code que tu devras renseigner avec ton nouveau mot de passe : <%= @user.reset_password_token %>.
+      voici le code que tu devras renseigner avec ton nouveau mot de passe : <%= @user.reset_password_token %>
     </p>
     <p>
       Pour accéder accerder au formulaire : <%= @url %>.
